--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
